--- a/app/views/question.jade
+++ b/app/views/question.jade
@@ -1,6 +1,6 @@
 section.container
 	form
-		.form-group(hide-directive, question = 'question', ng-view)
+		.form-group(hide-directive, question = 'question')
 			//- label(for="answer") {{question.title}}
 			//- input.hiddenn.form-control(type='text', placeholder='Your answer')
 			//- .checkbox.hiddenn
