added routing by questions. TODO slider, button, router

--- a/app/views/question.html
+++ b/app/views/question.html
@@ -1,1 +1,1 @@
-<section class="container"><form><div hide-directive="hide-directive" question="question" class="form-group"></div></form></section>
+<form><div variants="variants" class="form-group"></div></form>
