--- a/app/views/question.jade
+++ b/app/views/question.jade
@@ -1,13 +1,2 @@
-section.container
-	form
-		.form-group(hide-directive, question = 'question')
-			//- label(for="answer") {{question.title}}
-			//- input.hiddenn.form-control(type='text', placeholder='Your answer')
-			//- .checkbox.hiddenn
-			//- 	label.checkbox-inline
-			//- 		input(type='checkbox', value='')
-			//- 		span  Option one
-			//- .radio.hiddenn
-			//- 	label.radio-inline
-			//- 		input(type='radio', name='optionsRadios', id='optionsRadios1')
-			//- 		span 
+form
+	.form-group(variants)
