--- a/app/screen.css
+++ b/app/screen.css
@@ -18,11 +18,12 @@ footer {
 header {
 	font-size: 2em;
 }
-.hiddenn {
-  /*display: none;*/
-}
 .centered {
 	display: flex;
 	align-items: center;
 	justify-content: center;
+}
+section {
+  display: table;
+  margin: 0 auto;
 }
