--- a/app/views/poll.jade
+++ b/app/views/poll.jade
@@ -5,31 +5,32 @@ html
 		title Poll Application
 		//- link(rel="stylesheet", href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css")
 		//- link(rel="stylesheet", href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap-theme.min.css")
-		link(rel='stylesheet', href='components/bootstrap/dist/css/bootstrap.min.css')
-		link(rel='stylesheet', href='components/bootstrap/dist/css/bootstrap-theme.min.css')
-		link(rel="stylesheet", href="screen.css")
+		link(rel='stylesheet', href='../components/bootstrap/dist/css/bootstrap.min.css')
+		link(rel='stylesheet', href='../components/bootstrap/dist/css/bootstrap-theme.min.css')
+		link(rel="stylesheet", href="../screen.css")
 body(ng-app='app', ng-controller="MainCtrl")
 	noscript Please enable Javascript to experience this site :)
 	nav.navbar.navbar-default.navbar-fixed-top
 		.container-fluid
-			header.container.centered Poll Application
-	button.btn.btn-primary.btn-lg.col-md-4.text-center(ng-click='fetch();', ng-show='! id') Пройти опрос
-	section.container(ng-hide='! id', currentQuestion)
-		h2(go-title)
-		button.btn.btn-default(ng-click='setNextIndex();') Далее
-		div(ng-view)
+			header.container.centered
+				a(ng-href='/app/views/poll.html') Poll Application
+	button.btn.btn-primary.btn-lg.col-md-4.text-center.center-block(ng-click='fetch("/question");', ng-show='! id') Пройти опрос
+	section.col-xs-10.container(ng-hide='! id')
+		//- h2(go-title)
+		div(ng-view).center-block
+		button.btn.btn-default.center-block(ng-disabled ='choices.choiced', ng-click='next();') Далее
 	footer.navbar.navbar-default.navbar-fixed-bottom
 		.container.centered Created by Olga Malanova
 	
-	script(src='components/underscore/underscore-min.js')
-	script(src='components/angular/angular.min.js')
-	script(src='components/jquery/dist/jquery.min.js')
-	script(src='components/angular-route/angular-route.min.js')
-	script(src='components/bootstrap/dist/js/bootstrap.min.js')
+	script(src='../components/underscore/underscore-min.js')
+	script(src='../components/angular/angular.min.js')
+	script(src='../components/jquery/dist/jquery.min.js')
+	script(src='../components/angular-route/angular-route.min.js')
+	script(src='../components/bootstrap/dist/js/bootstrap.min.js')
 	//- script(src='//code.jquery.com/jquery-1.11.2.min.js')
 	//- script(src='//underscorejs.org/underscore-min.js')
 	//- script(src='//ajax.googleapis.com/ajax/libs/angularjs/1.3.11/angular.min.js')
 	//- script(src='//ajax.googleapis.com/ajax/libs/angularjs/1.3.11/angular-animate.js')
 	//- script(src='//code.angularjs.org/1.3.11/angular-route.js')
 	//- script(src='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js')
-	script(src='app.js')
+	script(src='../app.js')
