--- a/app/views/question.html
+++ b/app/views/question.html
@@ -1,1 +1,1 @@
-<form><div variants="variants" class="form-group"></div></form>
+<form><variants ng-model="answer" class="form-group"></variants><button ng-disabled="!value" ng-click="next();" class="btn btn-default">Далее</button></form>
