--- a/app/views/poll.jade
+++ b/app/views/poll.jade
@@ -3,8 +3,6 @@ html
 	head
 		meta(charset="utf-8")
 		title Poll Application
-		//- link(rel="stylesheet", href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css")
-		//- link(rel="stylesheet", href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap-theme.min.css")
 		link(rel='stylesheet', href='../components/bootstrap/dist/css/bootstrap.min.css')
 		link(rel='stylesheet', href='../components/bootstrap/dist/css/bootstrap-theme.min.css')
 		link(rel="stylesheet", href="../screen.css")
@@ -14,23 +12,16 @@ body(ng-app='app', ng-controller="MainCtrl")
 		.container-fluid
 			header.container.centered
 				a(ng-href='/app/views/poll.html') Poll Application
-	button.btn.btn-primary.btn-lg.col-md-4.text-center.center-block(ng-click='fetch("/question");', ng-show='! id') Пройти опрос
+	button.btn.btn-primary.center-block(ng-click='fetch("/question");', ng-show='! id') Пройти опрос
 	section.col-xs-10.container(ng-hide='! id')
-		//- h2(go-title)
-		div(ng-view).center-block
-		button.btn.btn-default.center-block(ng-disabled ='choices.choiced', ng-click='next();') Далее
+		div.question.btn-lg.col-md-4.center-block(ng-view)
 	footer.navbar.navbar-default.navbar-fixed-bottom
 		.container.centered Created by Olga Malanova
-	
 	script(src='../components/underscore/underscore-min.js')
 	script(src='../components/angular/angular.min.js')
 	script(src='../components/jquery/dist/jquery.min.js')
 	script(src='../components/angular-route/angular-route.min.js')
 	script(src='../components/bootstrap/dist/js/bootstrap.min.js')
-	//- script(src='//code.jquery.com/jquery-1.11.2.min.js')
-	//- script(src='//underscorejs.org/underscore-min.js')
-	//- script(src='//ajax.googleapis.com/ajax/libs/angularjs/1.3.11/angular.min.js')
-	//- script(src='//ajax.googleapis.com/ajax/libs/angularjs/1.3.11/angular-animate.js')
-	//- script(src='//code.angularjs.org/1.3.11/angular-route.js')
-	//- script(src='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js')
+	script(src='../components/bootstrap-slider/dist/bootstrap-slider.min.js')
+	script(src='../components/slider.js')
 	script(src='../app.js')
