--- a/app/views/question.jade
+++ b/app/views/question.jade
@@ -1,2 +1,3 @@
 form
-	.form-group(variants)
+	variants.form-group(ng-model="answer")
+	button.btn.btn-default(ng-disabled="!value" ng-click='next();') Далее
